--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "dev3000": "vite --port 3000",
-    "build": "vite build && cp ./_redirects ./dist/_redirects",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
